--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 CMAKE_MINIMUM_REQUIRED (VERSION 3.1)
 
 # Project Properties
-PROJECT (esapp)
-SET (APPLICATION_NAME "esapp")
+PROJECT (desa)
+SET (APPLICATION_NAME "desa")
 SET (APPLICATION_AUTHOR "Chi-En Wu")
 SET (APPLICATION_CODENAME "${APPLICATION_NAME}")
-SET (APPLICATION_COPYRIGHT_YEARS "2014-2015")
+SET (APPLICATION_COPYRIGHT_YEARS "2015")
 SET (APPLICATION_VERSION_MAJOR 0)
-SET (APPLICATION_VERSION_MINOR 4)
-SET (APPLICATION_VERSION_PATCH 1)
+SET (APPLICATION_VERSION_MINOR 1)
+SET (APPLICATION_VERSION_PATCH 0)
 SET (APPLICATION_VERSION_TYPE SNAPSHOT)
 SET (APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
 
@@ -26,5 +26,4 @@ INCLUDE_DIRECTORIES ("${MAINFOLDER}/include")
 # Add Build Targets
 ENABLE_TESTING ()
 ADD_SUBDIRECTORY (src)
-ADD_SUBDIRECTORY (example)
 ADD_SUBDIRECTORY (test)
