Replace cmake with meson

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
 .DS_Store
-
-# binary
-lib
-test/*_test
-
-# cmake
-CMakeCache.txt
-CMakeFiles
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-*.cmake
+build
+subprojects/*
+!subprojects/*.wrap
