Put header files into `include/desa`

--- a/meson.build
+++ b/meson.build
@@ -11,4 +11,11 @@ gtest_sp = subproject('gtest')
 gtest_dep = gtest_sp.get_variable('gtest_main_dep')
 
 subdir('src')
+
+inc = include_directories('include')
+dep = declare_dependency(
+  include_directories: inc,
+  link_with: lib,
+)
+
 subdir('test')
